[package]
name = "local-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
m3u8-rs = "6.0.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
futures = "0.3"
warp = "0.3.7"
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
